--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/core": "^18.1.0",
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.0",
-    "@angular/google-maps": "^18.1.2",
+    "@angular/google-maps": "^18.1.3",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/googlemaps": "^3.38.0",
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.12.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
