--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^18.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/googlemaps": "^3.38.0",
+    "angular-calendar": "^0.31.1",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
