--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "@angular/core": "^18.1.0",
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.1.0",
-    "@angular/google-maps": "^18.1.3",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/googlemaps": "^3.38.0",
     "angular-calendar": "^0.31.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -35,6 +34,7 @@
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
