--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,8 @@
               }
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/leaflet/dist/leaflet.css"
+              "src/assets/leaflet/leaflet-fix.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
